<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90b9c3"
        android:elevation="1dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:elevation="0dp"/>

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#4db2c4"
            android:weightSum="2"
            android:padding="0dp"
            android:layout_gravity="center"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/ManageTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Trip"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:textColor="@android:color/white"
                android:layout_margin="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/PastTrips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Past Trips"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:textColor="@android:color/white"
                android:layout_margin="0dp"
                android:layout_weight="1" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#4db2c4"
            android:weightSum="3"
            android:padding="0dp"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/ManageAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set Preferences"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:textColor="@android:color/white"
                android:layout_margin="0dp"/>


            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Out"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:textColor="@android:color/white"
                android:layout_margin="0dp"/>


            <Button
                android:id="@+id/viewRecipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Recipes"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="#4db2c4"
                android:textColor="@android:color/white"
                android:layout_margin="0dp"/>
        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>