...
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredient_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ingredient"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

...
            android:id="@+id/price_input_layout"
            android:layout_width="80dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="price"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/post_button_grocery_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4db2c4"
            android:textColor="@android:color/white"
            android:text="@string/post_button_text" />

        <Button
            android:id="@+id/delete_button_grocery_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4db2c4"
            android:textColor="@android:color/white"
...
