...
            android:padding="0dp"
            android:weightSum="3"
            android:layout_gravity="center"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/back_button_past"
                android:text="Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:backgroundTint="#4db2c4"
                android:layout_weight="0.10"
...
